--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "phaser": "^2.6.2",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "styled-components": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
