--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "phaser": "^2.6.2",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
