--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "deploy": "aws s3 cp build/ s3://ggj-2017/ --recursive --profile dev"
   },
   "jest": {
     "collectCoverageFrom": [
